--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,4 +1,7 @@
-line_length: 150
+# Extend line-length warning and error levels.
+line_length:
+  warning: 200
+  error: 300
 
 disabled_rules:
   - valid_docs
